Upgraded to Spring Boot 3.5.14 and Maven 3.9.16.